test/bad/automatic/extension/class/compile_time/0015.lat
class andrzej {
  int return;
}

int main() {
  andrzej andrzej = new andrzej;
  return andrzej.return;
}
